# contradiction_firewall

./: README.md  pyproject.toml
constraints/: example_ledger.json
contradiction_firewall/: __init__.py  extractor.py  ledger.py  logging_layer.py  memory.py  middleware.py  models.py  repair.py  retriever.py  risk_engine.py  utils.py
contradiction_firewall/detectors/: __init__.py  llm_judge.py  nli.py  numeric.py  rule_based.py
docs/: architecture.md
examples/: anthropic_advanced.py  openai_basic.py
tests/: adversarial_suite.py  test_detectors.py  test_extractor.py  test_ledger.py
