[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "contradiction-firewall"
version = "0.1.0"
description = "Infrastructure-layer contradiction detection and repair for LLM applications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "ai-safety", "contradiction", "middleware", "openai", "anthropic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
nli = ["sentence-transformers>=2.7", "torch>=2.0"]
embeddings = ["sentence-transformers>=2.7"]
full = [
  "openai>=1.0",
  "anthropic>=0.30",
  "sentence-transformers>=2.7",
  "torch>=2.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "black",
  "ruff",
  "mypy",
  "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/michelejoseph/contradiction_firewall"
Issues = "https://github.com/michelejoseph/contradiction_firewall/issues"

[tool.setuptools.packages.find]
include = ["contradiction_firewall*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
